<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/second_layout"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"

            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profile_img_place_holder"
                android:elevation="4dp"

                android:id="@+id/img_profile"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="12dp"
                android:layout_below="@id/img_profile"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyEditTextTwo">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/l_name"
                            android:maxLines="1"
                            android:ems="10"

                            android:selectAllOnFocus="true"
                            android:gravity="right"
                            android:inputType="text"
                            android:textColor="@color/gray_on_white"
                            android:layoutDirection="rtl"
                            android:id="@+id/edt_lname"
                            android:maxLength="20"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:theme="@style/MyEditTextTwo">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/f_name"
                            android:maxLines="1"
                            android:ems="10"

                            android:textColor="@color/gray_on_white"

                            android:selectAllOnFocus="true"
                            android:gravity="right"
                            android:inputType="text"
                            android:layoutDirection="rtl"
                            android:id="@+id/edt_fname"
                            android:maxLength="20"
                            />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10"
                    android:layoutDirection="rtl"
                    android:orientation="horizontal"
                    >
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:theme="@style/MyEditTextTwo">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/n_code"
                            android:maxLines="1"
                            android:ems="10"
                            android:textColor="@color/gray_on_white"

                            android:selectAllOnFocus="true"
                            android:gravity="right"
                            android:inputType="numberDecimal"
                            android:layoutDirection="rtl"
                            android:id="@+id/edt_ncode"
                            android:maxLength="10"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyEditTextTwo">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/b_parvane"
                            android:maxLines="1"
                            android:ems="10"

                            android:selectAllOnFocus="true"
                            android:gravity="right"
                            android:inputType="numberDecimal"
                            android:textColor="@color/gray_on_white"
                            android:layoutDirection="rtl"
                            android:id="@+id/edt_sh_parvane"
                            android:focusable="true"
                            android:maxLength="20"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="5"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyEditTextTwo">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/b_date"
                            android:maxLines="1"
                            android:ems="10"

                            android:selectAllOnFocus="true"
                            android:gravity="right"
                            android:inputType="text"
                            android:textColor="@color/gray_on_white"
                            android:layoutDirection="rtl"
                            android:id="@+id/edt_birth_date"
                            android:focusable="false"
                            android:maxLength="20"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10"
                    android:layoutDirection="rtl"
                    android:orientation="horizontal"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyEditTextTwo">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sex_str"
                            android:maxLines="1"
                            android:ems="10"
                            android:focusable="false"
                            android:drawableRight="@drawable/mini_detail_icon"
                            android:selectAllOnFocus="true"
                            android:gravity="right"
                            android:drawablePadding="5dp"
                            android:inputType="text"
                            android:textColor="@color/gray_on_white"
                            android:layoutDirection="rtl"
                            android:id="@+id/edt_sex"
                            android:maxLength="20"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyEditTextTwo">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/bank_str"
                            android:maxLines="1"
                            android:drawablePadding="5dp"

                            android:ems="10"
                            android:focusable="false"
                            android:drawableRight="@drawable/mini_detail_icon"
                            android:selectAllOnFocus="true"
                            android:gravity="right"
                            android:inputType="text"
                            android:textColor="@color/gray_on_white"
                            android:layoutDirection="rtl"
                            android:id="@+id/edt_bank"
                            android:maxLength="20"
                            />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10"
                    android:layoutDirection="rtl"
                    android:orientation="horizontal"
                    >
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="10"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:theme="@style/MyEditTextTwo">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sheba"
                            android:maxLines="1"
                            android:ems="10"
                            android:textColor="@color/gray_on_white"

                            android:selectAllOnFocus="true"
                            android:gravity="right"
                            android:inputType="text"
                            android:layoutDirection="rtl"
                            android:id="@+id/edt_sheba"
                            android:maxLength="26"
                            />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10"
                    android:layoutDirection="rtl"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:theme="@style/MyEditTextTwo">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:maxLines="1"
                            android:ems="10"
                            android:textColor="@color/gray_on_white"
                            android:focusable="false"
                            android:enabled="false"
                            android:selectAllOnFocus="true"
                            android:gravity="right"
                            android:inputType="phone"
                            android:layoutDirection="rtl"
                            android:id="@+id/edt_phone"
                            android:maxLength="11"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:theme="@style/MyEditTextTwo">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:maxLines="1"
                            android:ems="10"
                            android:textColor="@color/gray_on_white"
                            android:selectAllOnFocus="true"
                            android:gravity="right"
                            android:inputType="textEmailAddress"
                            android:layoutDirection="rtl"
                            android:id="@+id/edt_mail"
                            android:maxLength="40"
                            />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:id="@+id/footer"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="ذخیره موقت و خروج"
            android:id="@+id/btn_save"
            android:textColor="@color/white"
            android:background="#607D8B"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#448AFF"
            android:text="مرحله بعد"
            android:id="@+id/btn_next"
            android:textColor="@color/white"
            android:layout_height="match_parent" />


    </LinearLayout>
</RelativeLayout>